reports/blackbody.log
Traceback (most recent call last):
  File "/home/sean/Documents/Work/CDS_book/book/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/sean/Documents/Work/CDS_book/book/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/sean/Documents/Work/CDS_book/book/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/sean/Documents/Work/CDS_book/book/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/home/sean/Documents/Work/CDS_book/book/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/sean/Documents/Work/CDS_book/book/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/sean/Documents/Work/CDS_book/book/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import scipy.constants as cst
import numpy as np
import matplotlib.pyplot as plt
from simpletrans.plank import plank_nu, plank
import matplotlib as mpl

mpl.style.use("../CDS.mplstyle")
------------------

Traceback [0;36m(most recent call last)[0m:

  File [1;32m~/Documents/Work/CDS_book/book/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3398[0m in [1;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)

[0;36m  Input [0;32mIn [1][0;36m in [0;35m<cell line: 4>[0;36m[0m
[0;31m    from simpletrans.plank import plank_nu, plank[0m

[0;36m  File [0;32m~/Documents/Work/SimpleTrans/src/simpletrans/plank.py:93[0;36m[0m
[0;31m    {[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m '{' was never closed

SyntaxError: '{' was never closed (plank.py, line 93)

